# PPL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme  Readme_cmake.md  ppl.pro
include/PPL/: dataref.h  menuitem.h  overlaygauge.h
include/simpleini/: SimpleIni.h  snippets.cpp  test1-expected.ini  testsi  testsi.cpp
src/: action.h  alcontextchanger.cpp  alcontextchanger.h  alcontextmanager.cpp  alcontextmanager.h  alsoundbuffer.cpp  alsoundbuffer.h  basics.cpp  basics.h  bitmaploader.cpp  bitmaploader.h  command.cpp  command.h  commandbase.cpp  commandbase.h  dataref.cpp  dataref.h  flightloop.cpp  flightloop.h  font.cpp  font.h  fontmgr.cpp  fontmgr.h  log.cpp  log.h  logichandler.cpp  logichandler.h  logwriter.cpp  logwriter.h  menuitem.cpp  menuitem.h  messagewindow.cpp  messagewindow.h  namespaces.h  onscreendisplay.cpp  onscreendisplay.h  overlaygauge.cpp  overlaygauge.h  overlaywindow.cpp  overlaywindow.h  (+22 more)
